Adapt to API changes, clean up and fix broken places

--- a/src/app/components/editor/searchConceptModal.html
+++ b/src/app/components/editor/searchConceptModal.html
@@ -54,7 +54,7 @@
               </span>
 
               <div class="origin">
-                <span class="pull-left" ng-if="searchResult.id.isUrl()">{{searchResult.id.url}}</span>
+                <span class="pull-left">{{searchResult.vocabulary.title | translateValue}}</span>
               </div>
             </search-results>
 
