--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<accordion ng-if="ctrl.entity.subject" open-id="subjectViewOpen" >
+<accordion ng-if="ctrl.entity.subject" open-id="subjectViewOpen">
   <accordion-group>
     <accordion-heading>
       <div class="panel-heading">
@@ -38,9 +38,11 @@
       <div class="row" ng-if="ctrl.isEditing()">
         <div class="col-md-12">
           <button type="button"
-                  class="btn btn-action pull-right"
+                  class="btn btn-link pull-right"
                   ng-disabled="!ctrl.entity.inUnstableState"
-                  ng-click="ctrl.changeSubject()" uib-tooltip="{{'Change concept' | translate}}"><i class="fa fa-repeat"></i></button>
+                  ng-click="ctrl.changeSubject()">
+            <span translate>Change concept</span>
+          </button>
         </div>
       </div>
 
@@ -52,7 +54,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <non-editable-vocabulary vocabularies="ctrl.entity.subject.vocabularies" context="ctrl.model"></non-editable-vocabulary>
+          <non-editable-vocabulary vocabulary="ctrl.entity.subject.vocabulary" context="ctrl.model"></non-editable-vocabulary>
         </div>
       </div>
 
