--- a/src/app/components/editor/searchConceptModal.html
+++ b/src/app/components/editor/searchConceptModal.html
@@ -2,6 +2,7 @@
 
   <div class="modal-header">
     <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
       {{ctrl.defineConceptTitle | translate}}
     </h4>
   </div>
