--- a/src/app/components/editor/propertyPredicateView.html
+++ b/src/app/components/editor/propertyPredicateView.html
@@ -1,3 +1,5 @@
+<ajax-loading-indicator ng-if="ctrl.loading"></ajax-loading-indicator>
+
 <div ng-if="ctrl.predicate && !ctrl.loading">
 
   <div class="row">
