--- a/src/app/components/model/modelPage.html
+++ b/src/app/components/model/modelPage.html
@@ -10,45 +10,45 @@
 
   <div class="row bottom">
     <div class="col-12">
+      <div class="panel-left" snap="true">
+        <div class="selection-box" float always="true">
+          <uib-tabset active="ctrl.activeTab" justified="true">
+            <uib-tab ng-repeat="tab in ctrl.tabs">
+              <uib-tab-heading>
+                <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
+              </uib-tab-heading>
 
-      <div class="panel-left" float always="true" snap="true">
-        <!-- FIXME: float temporarily disabled -->
-        <uib-tabset active="ctrl.activeTab" justified="true">
-          <uib-tab ng-repeat="tab in ctrl.tabs">
-            <uib-tab-heading>
-              <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
-            </uib-tab-heading>
+              <div ng-if="$index === ctrl.activeTab">
 
-            <div ng-if="$index === ctrl.activeTab">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="selectable-actions">
+                      <button ng-if="ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
+                        <span class="glyphicon glyphicon-plus"></span>
+                        <span>{{tab.addLabel | translate}}</span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
 
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="selectable-actions">
-                    <button ng-if="ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
-                      <span class="glyphicon glyphicon-plus"></span>
-                      <span>{{tab.addLabel | translate}}</span>
-                    </button>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="selectable-items">
+                      <ul ng-class="{'has-button': ctrl.canEdit()}">
+                        <li ng-repeat="item in tab.items() track by item.id.uri"
+                            id="{{item.id.uri}}"
+                            ng-class="{'selection': ctrl.isSelected(item)}"
+                            ng-click="ctrl.select(item)">
+                          {{item.label}} <ajax-loading-indicator-small ng-if="ctrl.isLoading(item)"></ajax-loading-indicator-small>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
-
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="selectable-items">
-                    <ul ng-class="{'has-button': ctrl.canEdit()}">
-                      <li ng-repeat="item in tab.items() track by item.id.uri"
-                          id="{{item.id.uri}}"
-                          ng-class="{'selection': ctrl.isSelected(item)}"
-                          ng-click="ctrl.select(item)">
-                        {{item.label}} <ajax-loading-indicator-small ng-if="ctrl.isLoading(item)"></ajax-loading-indicator-small>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </uib-tab>
-        </uib-tabset>
+            </uib-tab>
+          </uib-tabset>
+        </div>
       </div>
 
       <div class="panel-right">
@@ -77,16 +77,18 @@
              ng-style="{ width: ctrl.visualizationWidth }"
              ng-show="ctrl.show !== 0">
 
-          <divider ng-if="ctrl.show === 1" selection-width="ctrl.selectionWidth"></divider>
+          <div float width="auto">
 
-          <visualization-view ng-if="ctrl.model"
-                              ng-class="{'without-divider': ctrl.show !== 1}"
-                              selection="ctrl.selection"
-                              model="ctrl.model"
-                              show="ctrl.show"
-                              model-page-actions="ctrl"
-                              float>
-          </visualization-view>
+            <divider ng-if="ctrl.show === 1" selection-width="ctrl.selectionWidth"></divider>
+
+            <visualization-view ng-if="ctrl.model"
+                                ng-class="{'without-divider': ctrl.show !== 1}"
+                                selection="ctrl.selection"
+                                model="ctrl.model"
+                                show="ctrl.show"
+                                model-page-actions="ctrl">
+            </visualization-view>
+          </div>
         </div>
 
       </div>
