--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -245,7 +245,7 @@ $left-width: 300px;
 
 model-page {
 
-  .content-box {
+  .content-box.main {
     padding-bottom: 0;
     border-bottom: none;
   }
