--- a/src/app/components/model/modelView.html
+++ b/src/app/components/model/modelView.html
@@ -29,9 +29,13 @@
         <hr />
 
         <editable-entity-buttons context="ctrl.model" editable-controller="ctrl">
+          <app-status [status]="ctrl.model.status"></app-status>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.model" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
-          <app-status [status]="ctrl.model.status"></app-status>
+          <button class="btn btn-link pull-right" ng-click="ctrl.visible = false">
+            <i class="fa fa-times"></i>
+            <span translate>Close</span>
+          </button>
         </editable-entity-buttons>
 
         <model-form model="ctrl.editableInEdit" model-controller="ctrl.modelController"></model-form>
