Hide header when there is no content

--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -132,7 +132,7 @@
     </div>
   </div>
 
-  <h4 translate>Technical metadata</h4>
+  <h4 translate ng-show="ctrl.isEditing() || ctrl.property.hasTechnicalMetadata()">Technical metadata</h4>
 
   <div class="row">
     <div class="col-md-6">
