Modal styles excluding select filters in place

--- a/src/app/components/editor/addPropertiesFromClassModal.html
+++ b/src/app/components/editor/addPropertiesFromClassModal.html
@@ -18,8 +18,8 @@
       </div>
     </div>
 
-    <button class="btn btn-action btn-xs" ng-click="ctrl.selectAll()" translate>Select all</button>
-    <button class="btn btn-action btn-xs" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
+    <button class="btn btn-action btn-sm" ng-click="ctrl.selectAll()" translate>Select all</button>
+    <button class="btn btn-action btn-sm" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
   </modal-body>
 
   <modal-buttons>
