--- a/src/app/components/editor/searchPredicateModal.html
+++ b/src/app/components/editor/searchPredicateModal.html
@@ -1,6 +1,8 @@
 <form name="form" class="search-predicate">
-  <modal-template editing="false">
-    <modal-title>
+
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
       <div ng-show="ctrl.onlySelection">
         <span ng-show="ctrl.typeSelectable" translate>Select attribute or association</span>
         <span ng-hide="ctrl.typeSelectable">{{('Select ' + ctrl.type) | translate}}</span>
@@ -9,107 +11,134 @@
         <span ng-show="ctrl.typeSelectable" translate>Add attribute or association</span>
         <span ng-hide="ctrl.typeSelectable">{{('Add ' + ctrl.type) | translate}}</span>
       </div>
-    </modal-title>
+    </h4>
+  </div>
 
-    <modal-body class="full-height">
+  <div class="modal-body full-height">
+    <div class="row mb-2">
+      <div class="col-12">
 
-      <div class="row">
+        <text-filter class="pull-left"
+                     search-text="ctrl.searchText"
+                     search-controller="ctrl"
+                     content-extractors="ctrl.contentExtractors"
+                     placeholder="ctrl.typeSelectable ? 'search attribute or association' : 'search ' + ctrl.type"></text-filter>
 
-        <div class="col-md-4">
-
-          <model-language-chooser context="ctrl.model"></model-language-chooser>
-
-          <p ng-show="ctrl.onlySelection" translate>Search predicate info</p>
-          <p ng-hide="ctrl.onlySelection" translate>Search or create predicate info</p>
-
-
-          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors"
-                       placeholder="ctrl.typeSelectable ? 'search attribute or association' : 'search ' + ctrl.type"></text-filter>
-
-          <div class="search-panel">
-            <span class="title" translate>Filter results</span>
-
-            <model-filter search-controller="ctrl" type="predicate" model="ctrl.model"></model-filter>
-            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
-            <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
-            <type-filter search-controller="ctrl" ng-show="ctrl.typeSelectable" label="Predicate type" default-type="ctrl.type"></type-filter>
-          </div>
+        <div class="pull-left mt-2 ml-2">
+          <content-filter search-controller="ctrl"
+                          content-matchers="ctrl.contentMatchers"
+                          content-extractors="ctrl.contentExtractors"></content-filter>
         </div>
 
-        <div class="col-md-4 search-results">
-          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+        <model-language-chooser class="pull-right"
+                                context="ctrl.model"></model-language-chooser>
+      </div>
+    </div>
 
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <div>
-              <i ng-class="searchResult.glyphIconClass"></i>
-              <h5>
+    <div class="row mb-2">
+      <div class="col-12">
+
+        <model-filter class="pull-left"
+                      search-controller="ctrl"
+                      type="predicate"
+                      model="ctrl.model"></model-filter>
+
+        <type-filter class="pull-left ml-2"
+                     search-controller="ctrl"
+                     ng-show="ctrl.typeSelectable"
+                     label="Predicate type"
+                     default-type="ctrl.type"></type-filter>
+
+        <excluded-filter search-controller="ctrl"
+                         search-text="ctrl.searchText"
+                         exclude="ctrl.exclude"></excluded-filter>
+      </div>
+    </div>
+
+    <div class="row full-height" style="height: calc(100% - 110px)">
+      <div class="col-6">
+        <div class="content-box">
+          <div class="search-results">
+
+            <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+            <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
+
+              <span class="title">
+                <i ng-class="searchResult.glyphIconClass"></i>
                 <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
                 <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight>
-              </h5>
-            </div>
-            <p><highlight text="searchResult.comment" context="ctrl.model" search="ctrl.searchText"></highlight></p>
-            <div class="origin">
-              <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.model}}</span>
-              <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
-            </div>
-          </search-results>
+              </span>
+
+              <span class="body">
+                <highlight text="searchResult.comment" context="ctrl.model" search="ctrl.searchText"></highlight>
+              </span>
+
+              <div class="origin">
+                <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.model}}</span>
+                <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
+              </div>
+
+            </search-results>
+          </div>
         </div>
+      </div>
 
-        <div class="col-md-4 search-selection editable-form">
+      <div class="col-6 search-selection editable-form">
+        <predicate-form ng-if="ctrl.isSelectionPredicate()" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
 
-          <predicate-form ng-if="ctrl.isSelectionPredicate()" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
+        <div ng-if="ctrl.isSelectionExternalEntity()">
+          <editable data-title="External URI" context="ctrl.model" autofocus>
+            <div class="input-group input-group-md">
+              <input id="externalUri"
+                     type="text"
+                     class="form-control"
+                     required
+                     uri-input="required-namespace"
+                     model="ctrl.model"
+                     ng-model="ctrl.selection.id"
+                     ng-model-options="{ debounce: 500 }" />
+            </div>
+          </editable>
 
-          <div ng-if="ctrl.isSelectionExternalEntity()">
-            <editable data-title="External URI" context="ctrl.model" autofocus>
-              <div class="input-group input-group-md">
-                <input id="externalUri"
-                       type="text"
-                       class="form-control"
-                       required
-                       uri-input="required-namespace"
-                       model="ctrl.model"
-                       ng-model="ctrl.selection.id"
-                       ng-model-options="{ debounce: 500 }" />
+          <div ng-if="ctrl.externalPredicate === null">
+            <editable data-title="Predicate type" ng-show="ctrl.typeSelectable" context="ctrl.model">
+              <div class="selectContainer">
+                <select class="form-control" required ng-model="ctrl.selection.type" ng-options="type | translate for type in ['attribute', 'association']"></select>
               </div>
             </editable>
 
-            <div ng-if="ctrl.externalPredicate === null">
-              <editable data-title="Predicate type" ng-show="ctrl.typeSelectable" context="ctrl.model">
-                <div class="selectContainer">
-                  <select class="form-control" required ng-model="ctrl.selection.type" ng-options="type | translate for type in ['attribute', 'association']"></select>
-                </div>
-              </editable>
-
-              <editable data-title="{{ctrl.selection.type + ' label' | capitalize}}" context="ctrl.model">
-                <input type="text" class="form-control" string-input="label" required ng-model="ctrl.selection.label" />
-              </editable>
-            </div>
-
-            <div ng-if="ctrl.externalPredicate">
-              <non-editable data-title="Predicate type" value="ctrl.externalPredicate.normalizedType" context="ctrl.model"></non-editable>
-              <non-editable data-title="{{ctrl.externalPredicate.normalizedType + ' label' | capitalize}}" value="ctrl.externalPredicate.label" context="ctrl.model"></non-editable>
-            </div>
+            <editable data-title="{{ctrl.selection.type + ' label' | capitalize}}" context="ctrl.model">
+              <input type="text" class="form-control" string-input="label" required ng-model="ctrl.selection.label" />
+            </editable>
           </div>
 
-          <error-panel error="ctrl.excludeError"></error-panel>
+          <div ng-if="ctrl.externalPredicate">
+            <non-editable data-title="Predicate type" value="ctrl.externalPredicate.normalizedType" context="ctrl.model"></non-editable>
+            <non-editable data-title="{{ctrl.externalPredicate.normalizedType + ' label' | capitalize}}" value="ctrl.externalPredicate.label" context="ctrl.model"></non-editable>
+          </div>
         </div>
 
+        <error-panel error="ctrl.excludeError"></error-panel>
       </div>
-    </modal-body>
+    </div>
+  </div>
 
-    <modal-buttons>
-      <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
-        <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
-        <span>{{ctrl.cannotConfirm | translate}}</span>
-      </div>
-      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button"
-              class="btn btn-action confirm"
-              ng-click="ctrl.confirm()"
-              ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalPredicatePending()">
-        {{(ctrl.selection.unsaved ? ('Create and use ' + ctrl.selection.type)
-                                  : (!ctrl.typeSelectable ? 'Use ' + ctrl.type : 'Use selection')) | translate}}
-      </button>
-    </modal-buttons>
-  </modal-template>
+  <div class="modal-footer">
+
+    <button type="button"
+            class="btn btn-action confirm"
+            ng-click="ctrl.confirm()"
+            ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalPredicatePending()">
+      {{(ctrl.selection.unsaved ? ('Create and use ' + ctrl.selection.type)
+      : (!ctrl.typeSelectable ? 'Use ' + ctrl.type : 'Use selection')) | translate}}
+    </button>
+
+    <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
+
+    <div class="alert alert-danger" role="alert" ng-show="ctrl.cannotConfirm">
+      <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+      <span>{{ctrl.cannotConfirm | translate}}</span>
+    </div>
+  </div>
 </form>
