--- a/src/app/components/model/searchNamespaceModal.html
+++ b/src/app/components/model/searchNamespaceModal.html
@@ -1,47 +1,77 @@
-<modal-template class="search-namespace">
-  <modal-title translate>Search namespaces</modal-title>
+<div class="search-namespace">
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+      <span translate>Search namespaces</span>
+    </h4>
+  </div>
 
-  <modal-body class="full-height">
-    <div class="row">
-      <div class="col-md-6">
+  <div class="modal-body full-height">
+    <div class="row mb-2">
+      <div class="col-12">
 
-        <model-language-chooser context="ctrl.model" class="pull-left"></model-language-chooser>
+        <text-filter class="pull-left"
+                     search-text="ctrl.searchText"
+                     search-controller="ctrl"
+                     content-extractors="ctrl.contentExtractors"
+                     placeholder="'search namespace'"></text-filter>
 
-        <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search namespace'"></text-filter>
+        <model-language-chooser class="pull-right"
+                                context="ctrl.model"></model-language-chooser>
+      </div>
+    </div>
 
-        <div class="search-panel">
-          <span class="title" translate>Filter results</span>
+    <div class="row mb-2">
+      <div class="col-12">
 
-          <excluded-filter search-controller="ctrl" exclude="ctrl.exclude" search-text="ctrl.searchText"></excluded-filter>
+        <div class="form-check form-check-inline pull-left">
+          <label>
+            <input type="checkbox" ng-model="ctrl.showTechnical" />
+            {{'Show technical namespaces' | translate}}
+          </label>
+        </div>
 
-          <div class="form-group">
-            <div class="checkbox">
-              <label><input type="checkbox" ng-model="ctrl.showTechnical">{{'Show technical namespaces' | translate}}</label>
-            </div>
+        <button type="button" class="btn btn-action btn-md pull-right"
+                ng-click="ctrl.createNew()">
+          <span class="glyphicon glyphicon-plus"></span>
+          {{'Add new namespace' | translate}}
+        </button>
+
+        <excluded-filter search-controller="ctrl"
+                         exclude="ctrl.exclude"
+                         search-text="ctrl.searchText"></excluded-filter>
+      </div>
+    </div>
+
+    <div class="row full-height" style="height: calc(100% - 110px)">
+      <div class="col-12">
+        <div class="content-box">
+          <div class="search-results">
+            <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+            <search-results ng-if="!ctrl.loadingResults"
+                            items="ctrl.searchResults"
+                            selected="ctrl.selected"
+                            exclude="ctrl.exclude"
+                            on-select="ctrl.selectItem(item)">
+
+            <span class="title">
+              <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight>
+            </span>
+
+              <span class="body">
+              <span ng-bind-html="searchResult.namespace | highlight: ctrl.searchText"></span>
+            </span>
+
+            </search-results>
           </div>
         </div>
       </div>
-
-      <div class="col-md-6 search-results">
-
-        <div class="clearfix" style="margin-bottom: 10px">
-          <button type="button" class="btn btn-action btn-md pull-right" ng-click="ctrl.createNew()">
-            <span class="glyphicon glyphicon-plus"></span>
-            {{'Add new namespace' | translate}}
-          </button>
-        </div>
-
-        <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
-
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5><highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight></h5>
-          <p ng-bind-html="searchResult.namespace | highlight: ctrl.searchText"></p>
-        </search-results>
-      </div>
     </div>
-  </modal-body>
+  </div>
 
-  <modal-buttons>
+  <div class="modal-footer">
     <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-  </modal-buttons>
-</modal-template>
+  </div>
+
+</div>
