--- a/src/app/components/model/searchReferenceDataModal.html
+++ b/src/app/components/model/searchReferenceDataModal.html
@@ -1,102 +1,126 @@
 <form name="form" class="search-reference-data">
-  <modal-template>
-    <modal-title translate>Search reference data</modal-title>
 
-    <modal-body class="full-height">
-      <div class="row">
-        <div class="col-md-4">
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+      <span translate>Search reference data</span>
+    </h4>
+  </div>
 
-          <model-language-chooser context="ctrl.model"></model-language-chooser>
+  <div class="modal-body full-height">
+    <div class="row mb-2">
+      <div class="col-12">
 
-          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search reference data'"></text-filter>
+        <text-filter class="pull-left"
+                     search-text="ctrl.searchText"
+                     search-controller="ctrl"
+                     content-extractors="ctrl.contentExtractors"
+                     placeholder="'search reference data'"></text-filter>
 
-          <div class="search-panel">
-            <span class="title" translate>Filter results</span>
-
-            <div class="form-group" ng-if="!ctrl.referenceDatasFromModel">
-              <label for="server" translate>Reference data server</label>
-              <div class="input-group input-group-md">
-                <select id="server" class="form-control" ng-model="ctrl.showServer"
-                        ng-options="(referenceDataServer.title | translateValue: ctrl.model) for referenceDataServer in ctrl.referenceDataServers">
-                  <option value="" translate>All servers</option>
-                </select>
-                <span ng-show="ctrl.showServer.description | translateValue: ctrl.model">{{ctrl.showServer.description | translateValue: ctrl.model}}</span>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="group" translate>Group</label>
-              <div class="input-group input-group-md">
-                <select id="group" class="form-control" ng-model="ctrl.showGroup"
-                        ng-options="(referenceDataGroup.title | translateValue: ctrl.model) for referenceDataGroup in ctrl.referenceDataGroups">
-                  <option value="" translate>All groups</option>
-                </select>
-              </div>
-            </div>
-
-            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
-            <content-filter search-controller="ctrl" content-extractors="ctrl.contentExtractors" content-matchers="ctrl.contentMatchers"></content-filter>
-          </div>
-
+        <div class="pull-left mt-2 ml-2">
+          <content-filter search-controller="ctrl"
+                          content-extractors="ctrl.contentExtractors"
+                          content-matchers="ctrl.contentMatchers"></content-filter>
         </div>
 
-        <div class="col-md-4 search-results">
-          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
-
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-            <h5>
-              <highlight text="searchResult.title" context="ctrl.model" search="ctrl.searchText"></highlight>
-              <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
-            </h5>
-            <p><highlight text="searchResult.description" context="ctrl.model" search="ctrl.searchText"></highlight></p>
-
-            <div class="origin">
-              <span ng-repeat="group in searchResult.groups">{{group.title | translateValue: ctrl.model}}{{$last ? '' : ', '}}</span>
-            </div>
-          </search-results>
-        </div>
-
-        <div class="col-md-4 search-selection">
-          <div ng-if="!ctrl.isSelectionFormData() && ctrl.selection">
-            <reference-data-view data-title="Reference data information" context="ctrl.model" reference-data="ctrl.selection" show-codes="true"></reference-data-view>
-          </div>
-
-          <div ng-if="ctrl.isSelectionFormData()">
-            <editable data-title="Reference data URI" context="ctrl.model" autofocus>
-              <div class="input-group input-group-md">
-                <input id="uri" type="text" class="form-control" required uri-input="free-url" model="ctrl.model" ng-model="ctrl.selection.uri" />
-              </div>
-            </editable>
-
-            <editable data-title="Reference data label" context="ctrl.model">
-              <div class="input-group input-group-md">
-                <input id="label" type="text" class="form-control" required string-input="label" model="ctrl.model" ng-model="ctrl.selection.label" />
-              </div>
-            </editable>
-
-            <editable data-title="Description" context="ctrl.model">
-              <div class="input-group input-group-md">
-                <textarea id="description" class="form-control" required string-input model="ctrl.model" ng-model="ctrl.selection.description"></textarea>
-              </div>
-            </editable>
-          </div>
-
-          <error-panel error="ctrl.submitError"></error-panel>
-        </div>
-
+        <model-language-chooser class="pull-right"
+                                context="ctrl.model"></model-language-chooser>
       </div>
-    </modal-body>
+    </div>
 
-    <modal-buttons>
-      <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
-        <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
-        <span>{{ctrl.cannotConfirm | translate}}</span>
+    <div class="row mb-2">
+      <div class="col-12">
+
+        <select id="server"
+                class="form-control pull-left"
+                style="width: auto"
+                ng-model="ctrl.showServer"
+                ng-options="(referenceDataServer.title | translateValue: ctrl.model) for referenceDataServer in ctrl.referenceDataServers">
+          <option value="" translate>All servers</option>
+        </select>
+
+        <select id="group"
+                class="form-control ml-2 pull-left"
+                style="width: auto"
+                ng-model="ctrl.showGroup"
+                ng-options="(referenceDataGroup.title | translateValue: ctrl.model) for referenceDataGroup in ctrl.referenceDataGroups">
+          <option value="" translate>All groups</option>
+        </select>
+
+        <excluded-filter search-controller="ctrl"
+                         search-text="ctrl.searchText"
+                         exclude="ctrl.exclude"></excluded-filter>
       </div>
-      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button" class="btn btn-action confirm" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selection || ctrl.cannotConfirm || form.$invalid || form.$pending">
-        <span ng-show="ctrl.isSelectionFormData()" translate>Create new</span>
-        <span ng-hide="ctrl.isSelectionFormData()" translate>Use selection</span>
-      </button>
-    </modal-buttons>
-  </modal-template>
+    </div>
+
+
+    <div class="row full-height" style="height: calc(100% - 110px)">
+      <div class="col-6">
+        <div class="content-box">
+          <div class="search-results">
+
+            <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+            <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+
+              <span class="title">
+                <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
+                <highlight text="searchResult.title" context="ctrl.model" search="ctrl.searchText"></highlight>
+              </span>
+
+              <span class="body">
+                <highlight text="searchResult.description" context="ctrl.model" search="ctrl.searchText"></highlight>
+              </span>
+
+              <div class="origin">
+                <span ng-repeat="group in searchResult.groups">{{group.title | translateValue: ctrl.model}}{{$last ? '' : ', '}}</span>
+              </div>
+            </search-results>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 search-selection">
+        <div ng-if="!ctrl.isSelectionFormData() && ctrl.selection">
+          <reference-data-view data-title="Reference data information" context="ctrl.model" reference-data="ctrl.selection" show-codes="true"></reference-data-view>
+        </div>
+
+        <div ng-if="ctrl.isSelectionFormData()">
+          <editable data-title="Reference data URI" context="ctrl.model" autofocus>
+            <div class="input-group input-group-md">
+              <input id="uri" type="text" class="form-control" required uri-input="free-url" model="ctrl.model" ng-model="ctrl.selection.uri" />
+            </div>
+          </editable>
+
+          <editable data-title="Reference data label" context="ctrl.model">
+            <div class="input-group input-group-md">
+              <input id="label" type="text" class="form-control" required string-input="label" model="ctrl.model" ng-model="ctrl.selection.label" />
+            </div>
+          </editable>
+
+          <editable data-title="Description" context="ctrl.model">
+            <div class="input-group input-group-md">
+              <textarea id="description" class="form-control" required string-input model="ctrl.model" ng-model="ctrl.selection.description"></textarea>
+            </div>
+          </editable>
+        </div>
+
+        <error-panel error="ctrl.submitError"></error-panel>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-action confirm" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selection || ctrl.cannotConfirm || form.$invalid || form.$pending">
+      <span ng-show="ctrl.isSelectionFormData()" translate>Create new</span>
+      <span ng-hide="ctrl.isSelectionFormData()" translate>Use selection</span>
+    </button>
+
+    <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
+
+    <div class="alert alert-danger" role="alert" ng-show="ctrl.cannotConfirm">
+      <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+      <span>{{ctrl.cannotConfirm | translate}}</span>
+    </div>
+  </div>
 </form>
