Information page and link to footer

--- a/src/app/components/application.html
+++ b/src/app/components/application.html
@@ -5,6 +5,8 @@
     <div ng-view></div>
   </div>
 
-  <app-footer [title]="'Tietomallit'" ng-if="ctrl.showFooter"></app-footer>
+  <app-footer [title]="'Tietomallit'"
+              [on-information-click]="ctrl.navigateToInformation"
+              ng-if="ctrl.showFooter"></app-footer>
   <google-analytics ng-if="ctrl.production"></google-analytics>
 </ng-container>
