Remove unused attribute

--- a/src/app/components/model/modelPage.html
+++ b/src/app/components/model/modelPage.html
@@ -12,7 +12,7 @@
 
   <div class="row bottom">
     <div class="col-12">
-      <div class="panel-left" snap="true">
+      <div class="panel-left">
         <div class="selection-box" float always="true">
           <uib-tabset active="ctrl.activeTab" justified="true">
             <uib-tab ng-repeat="tab in ctrl.tabs">
