--- a/src/app/components/common/historyModal.html
+++ b/src/app/components/common/historyModal.html
@@ -16,36 +16,34 @@
     </div>
   </div>
 
-  <div class="row" style="height: calc(100% - 40px); padding-bottom: 0">
-    <div class="col-4">
-      <div style="height: 100%; border: 1px solid #A5ACB0">
-        <div class="selectable-items" style="height: 100%">
-          <ul style="height: 100%; overflow-y: auto">
-            <li ng-repeat="version in ctrl.versions track by version.id"
-                ng-class="{'selection': ctrl.isSelected(version)}"
-                ng-click="ctrl.select(version)">
-              {{version.createdAt | localizedDate}}
-              <span ng-if="ctrl.showAuthor">
+
+  <div style="float: left; width: 300px; height: calc(100% - 40px); border: 1px solid #A5ACB0">
+    <div class="selectable-items" style="height: 100%">
+      <ul style="height: 100%; overflow-y: auto">
+        <li ng-repeat="version in ctrl.versions track by version.id"
+            ng-class="{'selection': ctrl.isSelected(version)}"
+            ng-click="ctrl.select(version)">
+          {{version.createdAt | localizedDate}}
+          <span ng-if="ctrl.showAuthor">
               <br />
               {{version.createdBy}}
             </span>
-              <ajax-loading-indicator-small ng-if="ctrl.isLoading(version)"></ajax-loading-indicator-small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-8" style="height: 100%; overflow-y: auto">
-      <form class="editable-form">
-        <div ng-if="ctrl.selection" style="height: 100%">
-          <model-form ng-if="ctrl.selection.isOfType('model')" model="ctrl.selection"></model-form>
-          <class-form ng-if="ctrl.selection.isClass()" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model" open-property-id="openPropertyId"></class-form>
-          <predicate-form ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
-        </div>
-      </form>
+          <ajax-loading-indicator-small ng-if="ctrl.isLoading(version)"></ajax-loading-indicator-small>
+        </li>
+      </ul>
     </div>
   </div>
+
+  <div style="float: left; width: calc(100% - 300px); height: calc(100% - 40px); padding-left: 20px;">
+    <form class="editable-form">
+      <div ng-if="ctrl.selection" style="height: 100%; overflow-x: hidden">
+        <model-form ng-if="ctrl.selection.isOfType('model')" model="ctrl.selection"></model-form>
+        <class-form ng-if="ctrl.selection.isClass()" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model" open-property-id="openPropertyId"></class-form>
+        <predicate-form ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selection" old-predicate="ctrl.selection" model="ctrl.model"></predicate-form>
+      </div>
+    </form>
+  </div>
+
 </div>
 
 <div vlass="modal-footer">
