Adapt to yti-common-ui change

--- a/src/app/components/application.html
+++ b/src/app/components/application.html
@@ -6,7 +6,7 @@
   </div>
 
   <app-footer [title]="'Tietomallit'"
-              [on-information-click]="ctrl.navigateToInformation"
+              (information-click)="ctrl.navigateToInformation()"
               ng-if="ctrl.showFooter"></app-footer>
   <google-analytics ng-if="ctrl.production"></google-analytics>
 </ng-container>
