--- a/src/app/components/model/newModelPage.html
+++ b/src/app/components/model/newModelPage.html
@@ -31,7 +31,7 @@
           <editable-multiple-language-select data-title="Model languages" id="modelLanguage" ng-model="ctrl.languages" required="true"></editable-multiple-language-select>
 
           <editable data-title="Prefix" context="ctrl.context">
-            <input id="modelPrefix" class="form-control" type="text" ng-model="ctrl.prefix" autocomplete="off" required />
+            <input id="modelPrefix" class="form-control" type="text" prefix-input ng-model="ctrl.prefix" autocomplete="off" required />
           </editable>
 
         </div>
