--- a/src/app/components/editor/visualizationView.html
+++ b/src/app/components/editor/visualizationView.html
@@ -1,4 +1,6 @@
 <class-visualization model="ctrl.model"
                      selection="ctrl.selection"
-                     model-page-actions="ctrl.modelPageActions">
+                     model-page-actions="ctrl.modelPageActions"
+                     maximized="ctrl.maximized"
+                     ng-class="{'maximized': ctrl.maximized}">
 </class-visualization>
