--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -438,6 +438,14 @@ model-page {
           width: 100%;
         }
 
+        &.maximized {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+
         class-visualization {
 
           width: 100%;
@@ -457,6 +465,7 @@ model-page {
             position: absolute;
             left: 10px;
             top: 10px;
+            width: calc(100% - 20px);
 
             .btn-secondary-action {
               background-color: $white;
