--- a/src/app/components/editor/classView.html
+++ b/src/app/components/editor/classView.html
@@ -1,7 +1,7 @@
 <form name="form" class="editable-form">
   <fieldset ng-disabled="ctrl.persisting">
     <div ng-if="ctrl.class && ctrl.model">
-      <selection-view model="ctrl.model" editable-controller="ctrl" show="ctrl.show">
+      <selection-view model="ctrl.model" editable-controller="ctrl">
         <selection-buttons>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.class" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.class" ng-hide="ctrl.isEditing()"></history>
