--- a/src/app/components/editor/selectionView.html
+++ b/src/app/components/editor/selectionView.html
@@ -3,7 +3,7 @@
   <div class="component-header">
     <h3>
       <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
-      <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel: ctrl.model}}</span>
+      <span>{{ctrl.editableController.getEditable() | translateLabel: ctrl.model}}</span>
     </h3>
   </div>
 
