YTI-702 Text changes, corrections and link cleanings

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -27,20 +27,20 @@
 
   <ul>
     <li>mahdollistaa nykyaikaisten digitaalisten palveluiden taustalla tarvittavan tiedon semanttisen yhteentoimivuuden huomioivan tietomallinnuksen</li>
-    <li>kuvataan tietosisältöjä tavalla, jossa tiedon merkitys voidaan sanastojen avulla määritellä</li>
-    <li>luodaan rajattuja tietomäärityskokonaisuuksia, niin kutsuttuja soveltamisprofiileja, jotka kuvaavat tietojärjestelmän tietosisällön, esimerkiksi rajapinnan toteutukseen.</li>
-    <li>Tietomallit-työkalulla luodaan sisältöjä, jotka ovat avointa linkitettyä dataa</li>
+    <li>työkalulla kuvataan tietosisältöjä tavalla, jossa tiedon merkitys voidaan sanastojen avulla määritellä</li>
+    <li>luodaan rajattuja tietomäärityskokonaisuuksia, niin kutsuttuja soveltamisprofiileja, jotka kuvaavat tietojärjestelmän tietosisällön, esimerkiksi rajapinnan toteutukseen</li>
+    <li>Tietomallit-työkalulla luodaan sisältöjä, jotka ovat avointa linkitettyä dataa.</li>
   </ul>
 
   <h2>Hyödyt käyttäjille</h2>
 
   <ul>
-    <li>tietomallit mahdollistavat tiedon semanttisen yhteentoimivuuden formaalilla tavalla</li>
-    <li>tietosisällöt ovat sekä ihmis- että koneluettavia</li>
-    <li>tietosisällöt ovat avoimesti nähtävillä ja hyödynnettävissä sopimusehtojen mukaisesti</li>
-    <li>mahdollistaa toimijoiden yhteistyön tietomallinnuksessa</li>
-    <li>toimijat voivat hyödyntää omassa työssään jo olemassa olevia, harmonisoituja tietosisältöjä</li>
-    <li>mahdollistaa tietosisältöjen linkittämisen ja sitä kautta tiedon linkittämisen toimijoiden valitsemiin kansainvälisiin tai muihin standardeihin</li>
+    <li>Tietomallit mahdollistavat tiedon semanttisen yhteentoimivuuden formaalilla tavalla.</li>
+    <li>Tietosisällöt ovat sekä ihmis- että koneluettavia.</li>
+    <li>Tietosisällöt ovat avoimesti nähtävillä ja hyödynnettävissä sopimusehtojen mukaisesti.</li>
+    <li>Työkalu mahdollistaa toimijoiden yhteistyön tietomallinnuksessa.</li>
+    <li>Toimijat voivat hyödyntää omassa työssään jo olemassa olevia, harmonisoituja tietosisältöjä.</li>
+    <li>Tietomallit-työkalu mahdollistaa tietosisältöjen linkittämisen ja sitä kautta tiedon linkittämisen toimijoiden valitsemiin kansainvälisiin tai muihin standardeihin.</li>
   </ul>
 
   <h2>Miten voin liittyä työkalun käyttäjäksi?</h2>
@@ -55,10 +55,9 @@
     <li>
       <a id="interoperability_site_link" href="https://yhteentoimiva.suomi.fi" target="_blank">yhteentoimiva.suomi.fi</a>
     </li>
-    <li>
-      Yhteinen tiedon hallinta (YTI) -hankkeen dokumentaatio Confluencessa
+    <li>      
       <a id="documentation_link" href="https://confluence.csc.fi/display/VRKYTI/VRK+YTI" target="_blank">
-        https://confluence.csc.fi/display/VRKYTI/VRK+YTI
+        Yhteinen tiedon hallinta (YTI) -hankkeen dokumentaatio Confluencessa
       </a>
     </li>
     <li>
@@ -67,10 +66,9 @@
         yhteinen tiedon hallinta (YTI) -hankkeen sivut
       </a>
     </li>
-    <li>
-      Julkisen hallinnon käsitemalliryhmän esittelysivu
+    <li>      
       <a id="concept_model_group_link" href="https://wiki.julkict.fi/julkict/juhta/juhta-tyoryhmat-2016/kasitemallit/julkisen-hallinnon-kasitemalliryhma-esittelysivu" target="_blank">
-        https://wiki.julkict.fi/julkict/juhta/juhta-tyoryhmat-2016/kasitemallit/julkisen-hallinnon-kasitemalliryhma-esittelysivu
+        Julkisen hallinnon käsitemalliryhmän esittelysivu
       </a>
     </li>
    </ul>
