YTI-702 Fix grammar

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -20,7 +20,7 @@
     <li>organisaation tietovastaaville</li>
     <li>tietoarkkitehdeille ja tietomallintajille</li>
     <li>jokaiselle, joka etsii tietoa julkisen hallinnon tietovarannoista</li>
-    <li>järjestelmätoimittajille, joka järjestelmäkehitystyötä varten tarvitsee tietoa julkisen hallinnon tietovarannoista tai niiden tietorakenteista ja sisällöistä.</li>
+    <li>järjestelmätoimittajille, jotka järjestelmäkehitystyötä varten tarvitsevat tietoa julkisen hallinnon tietovarannoista tai niiden tietorakenteista ja sisällöistä.</li>
   </ul>
 
   <h2>Tietomallit-työkalu</h2>
